--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Javascipt Basics</h1>
+    <h2>we will use this page to lurn the Basics</h2>
     <canvas id="game-canvas"></canvas>
     <script src="scripts/app.js"></script>
 </body>
