--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Javascipt Basics</h1>
+    <h1 style="color: red;">Javascipt Basics</h1>
     <h2>we will use this page to lurn the Basics</h2>
     <canvas id="game-canvas"></canvas>
     <script src="scripts/app.js"></script>
