--- a/hello-world.html
+++ b/hello-world.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascipt Basics</title>
+    <title>Hello world!</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1 style="color: red;">Javascipt Basics</h1>
-    <h2>we will use this page to lurn the Basics</h2>
-    <canvas id="game-canvas"></canvas>
-    <script src="scripts/app.js"></script>
+    <h1 style="color: red;">Hello world</h1>
+
+    <script src="scripts/hello-world.js"></script>
 </body>
 
 </html>
