--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <h1 style="color: red;">Javascipt Basics</h1>
     <h2>we will use this page to lurn the Basics</h2>
-    <canvas id="game-canvas"></canvas>
-    <script src="scripts/app.js"></script>
+    
+    <ul>
+        <li><a href="hello-world.html">hello world</a></li>
+    </ul>
 </body>
 
 </html>
