--- a/rps.html
+++ b/rps.html
@@ -18,6 +18,12 @@
 
     </div>
     
+    <h2 id="game results"></h2>
+
+    <div id="game-restart" style="display: none;">
+        <h3> Do you whant to play again</h3>
+        <button id="btn-restart">Play again</button>
+    </div>
 
     <script src="scripts/rps-game.js"></script>
 </body>
