--- a/rps.html
+++ b/rps.html
@@ -18,7 +18,7 @@
 
     </div>
     
-    <h2 id="game results"></h2>
+    <h2 id="game-results"></h2>
 
     <div id="game-restart" style="display: none;">
         <h3> Do you whant to play again</h3>
