--- a/canvas-basics.html
+++ b/canvas-basics.html
@@ -24,9 +24,9 @@
         const canvas = document.getElementById("game-canvas");
 
         function resize(){
-            canvas.Width = window.innerWidth;
+            canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
-            console.log(canvas.Width, canvas.height);
+            console.log(canvas.width, canvas.height);
         }
         resize()
 
